<resources>
    <string name="app_name">polyv1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sparta_logo">Sparta Logo</string>
    <string name="polydev_app_version">Разработано в Polydev.io</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="notification">Уведомление</string>
    <string name="cart">Корзина</string>
    <string name="settings">Настройки</string>
    <string name="image_arrow_right">image arrow right</string>
</resources>